@@ -350,13 +350,13 @@ out:
 	return ret;
 }
 
-int ibv_cmd_req_notify_cq(struct ibv_cq *ibcq, int solicited)
+int ibv_cmd_req_notify_cq(struct ibv_cq *ibcq, int solicited_only)
 {
 	struct ibv_req_notify_cq cmd;
 
 	IBV_INIT_CMD(&cmd, sizeof cmd, REQ_NOTIFY_CQ);
 	cmd.cq_handle = ibcq->handle;
-	cmd.solicited = solicited ? 0 : 1;
+	cmd.solicited = !!solicited_only;
 
 	if (write(ibcq->context->cmd_fd, &cmd, sizeof cmd) != sizeof cmd)
 		return errno;
